# OrangeCloud

./: .gitignore  CMakeLists.txt  ReadMe.md  main.cpp  resources.qrc
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  weather.cpp  weather.h  weatheritem.cpp  weatheritem.h  weatheritem.ui
